# teknofest-2026-sruy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
cargobot_ws/: Dockerfile  README.md  docker-compose.yml
cargobot_ws/src/cargobot_bringup/: CMakeLists.txt  package.xml
cargobot_ws/src/cargobot_bringup/launch/: simulation.launch.py
cargobot_ws/src/cargobot_description/: CMakeLists.txt  package.xml
cargobot_ws/src/cargobot_description/launch/: display.launch.py
cargobot_ws/src/cargobot_description/urdf/: cargobot.gazebo.xacro  cargobot.urdf.xacro
cargobot_ws/src/cargobot_gazebo/: CMakeLists.txt  package.xml
cargobot_ws/src/cargobot_gazebo/launch/: gazebo.launch.py
cargobot_ws/src/cargobot_gazebo/worlds/: factory.world
cargobot_ws/src/cargobot_mission/: package.xml  setup.cfg  setup.py
cargobot_ws/src/cargobot_mission/cargobot_mission/: cmd_vel_mux.py  dashboard.py  mission_manager.py  plc_simulator.py
cargobot_ws/src/cargobot_mission/launch/: mission.launch.py
cargobot_ws/src/cargobot_navigation/: CMakeLists.txt  package.xml
cargobot_ws/src/cargobot_navigation/config/: nav2_params.yaml  slam_toolbox.yaml
cargobot_ws/src/cargobot_navigation/launch/: navigation.launch.py  slam.launch.py
cargobot_ws/src/cargobot_perception/: package.xml  setup.cfg  setup.py
cargobot_ws/src/cargobot_perception/cargobot_perception/: line_follower.py  qr_detector.py  safety_stop.py
cargobot_ws/src/cargobot_perception/launch/: perception.launch.py
docs/arastirma/: gecmis_yillar.md  referans_projeler.md  teknik_stack_2026.md
docs/arayuz/: qml_tasarim.md
docs/donanim/: bom.md  kablolama.md
docs/mimari/: bounded_contexts.md  dizin_haritasi.md  event_katalogu.md  eventbus.md  eventbus_tutorial.md  sekanslar.md  sistem_mimarisi.md
docs/plan/: ekip_roller.md  risk_matrisi.md  yol_haritasi.md
docs/raporlar/: PDR_iskelet.md  TYF_iskelet.md  video_storyboard.md
docs/sartname/: 2026_SRUY_TR.txt  gorevler_puanlama.md  sartname_ozeti.md
docs/setup/: ros2_jetson_kurulum.md  sim_kurulum.md
docs/test/: test_stratejisi.md
hardware/urdf/: cargobot.urdf.xacro
sim/: Dockerfile.sim
sim/configs/: modbus_server.json
sim/launch/: cargobot_world.launch.py  sim.launch.py
sim/worlds/: cargobot.world  teknofest_saha.world
src/: main.py
src/application/: bootstrap.py  commands.py  demo.py  profile.py  wiring.py
src/application/handlers/: fleet_handlers.py  mission_handlers.py  navigation_handlers.py  safety_handlers.py
src/cargobot/: __init__.py  main.py
src/cargobot/application/: bootstrap.py  commands.py  wiring.py
src/cargobot/application/handlers/: fleet_handlers.py  mission_handlers.py  navigation_handlers.py  safety_handlers.py
src/cargobot/domain/_shared/: exceptions.py  value_objects.py
src/cargobot/domain/fleet_io/: events.py  gateway.py
src/cargobot/domain/mission/: aggregate.py  events.py  states.py
src/cargobot/domain/navigation/: aggregate.py  events.py  value_objects.py
src/cargobot/domain/perception/: detectors.py  events.py
src/cargobot/domain/safety/: aggregate.py  events.py
src/cargobot/domain/telemetry/: snapshot.py
src/cargobot/infrastructure/bus/: __init__.py  async_bus.py
src/cargobot/infrastructure/motor/: mock_motor.py
src/cargobot/infrastructure/plc/: mock_adapter.py
src/domain/_shared/: events.py
src/domain/fleet_io/: events.py  gateway.py  messages.py
src/domain/mission/: aggregate.py  events.py
src/domain/navigation/: aggregate.py  events.py  value_objects.py
src/domain/perception/: detectors.py  events.py
src/domain/safety/: aggregate.py  events.py
src/domain/telemetry/: projector.py  snapshot.py
src/eventbus/: __init__.py  async_bus.py
src/infrastructure/camera/: ros2_image_subscriber.py
src/infrastructure/lidar/: ros2_scan_subscriber.py
src/infrastructure/motor/: ros2_cmd_vel.py
src/infrastructure/plc/: mock_adapter.py  modbus_adapter.py
src/infrastructure/ros2/: node.py  pose_bridge.py
src/ui/: app_context.py  local_runner.py  main.py  ws_source.py
src/ui/qml/: main.qml
src/ui/qml/pages/: DashboardPage.qml
tests/integration/: test_eventbus_flow.py  test_ui_information_completeness.py
tests/unit/: test_async_bus.py  test_mission_aggregate.py  test_route_graph.py  test_safety.py
