[project]
name = "cargobot"
version = "0.1.0"
description = "TEKNOFEST 2026 SRUY — Otonom Forklift Mobil Robot"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "CargoBot Takımı" }]
license = { text = "Proprietary (yarışma dönemi)" }

dependencies = [
    "pydantic>=2.7",
    "structlog>=24.1",
    "uvloop>=0.19; sys_platform != 'win32'",
    "pyyaml>=6.0",
    "websockets>=12.0",
    "PySide6>=6.7",
    "numpy>=1.26",
    "opencv-python>=4.10",
    "pyzbar>=0.1.9",
    "pymodbus>=3.6",
    "asyncua>=1.1",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
ros2 = [
    # rclpy resmi PyPI'da değil; ROS2 Humble apt paketi ile gelir
    # ros-humble-* paketleri Ubuntu 22.04 üzerine kurulur
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]
sim = [
    # Gazebo entegrasyonu için ek paketler (apt'tan gelir)
]

[project.scripts]
cargobot = "cargobot.interface.cli.cli:main"
cargobot-gui = "ui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cargobot", "src/ui"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RET", "ARG",
    "PL", "PERF", "RUF",
]
ignore = ["PLR0913"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = ["src/cargobot"]

[[tool.mypy.overrides]]
module = ["cv2", "pyzbar.*", "rclpy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "sim: Gazebo simülasyon gerektirir",
    "hardware: gerçek donanım gerektirir",
    "acceptance: şartname kabul kriterleri",
]
