<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cargobot_bringup</name>
  <version>0.1.0</version>
  <description>CargoBot ust seviye launch dosyalari (tam simulasyon)</description>
  <maintainer email="muammer@clonifylabs.com">cargobot team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cargobot_description</exec_depend>
  <exec_depend>cargobot_gazebo</exec_depend>
  <exec_depend>cargobot_navigation</exec_depend>
  <exec_depend>cargobot_perception</exec_depend>
  <exec_depend>cargobot_mission</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
