<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cargobot_mission</name>
  <version>0.1.0</version>
  <description>Gorev yoneticisi (FSM), PLC simulatoru, cmd_vel mux ve kontrol paneli</description>
  <maintainer email="muammer@clonifylabs.com">cargobot team</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
