<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cargobot_navigation</name>
  <version>0.1.0</version>
  <description>CargoBot SLAM (slam_toolbox) ve Nav2 navigasyon konfigurasyonu</description>
  <maintainer email="muammer@clonifylabs.com">cargobot team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_regulated_pure_pursuit_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
